--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(16px);
             /* 中央配置と右ずらし */
-            background: #fcdb57;
+            background: #7ebd74;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -38,7 +38,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            color: #050505;
+            color: white;
             text-decoration: none;
             font-size: 10px;
             margin: 5px 0;
@@ -104,8 +104,8 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #fcdb57, #fcdb57);
-            color: #313131;
+            background: linear-gradient(135deg, #7ebd74, #7ebd74);
+            color: white;
             padding: 20px;
             border-radius: 0 0px 0px 0px;
             text-align: center;
@@ -123,8 +123,8 @@
             margin-bottom: 20px;
             padding: 3px;
             font-weight: 400;
-            background-color: #fcdb57;
-            color: #313131;
+            background-color: #7ebd74;
+            color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
             text-align: center;
@@ -141,8 +141,8 @@
             display: block;
             margin-bottom: 20px;
             padding: 3px;
-            background-color: #fcdb57;
-            color: #313131;
+            background-color: #7ebd74;
+            color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
             text-align: center;
@@ -160,8 +160,8 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 400;
-            background-color: #fcdb57;
-            color: #313131;
+            background-color: #7ebd74;
+            color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
             text-align: center;
@@ -260,7 +260,7 @@
             border: none;
             border-radius: 4px;
             background-color: #ff4c4c;
-            color: #0a0a0a;
+            color: #fff;
             font-size: 18px;
             cursor: pointer;
         }
@@ -323,7 +323,7 @@
         }
 
         .calendar td.selected {
-            background-color: #fcdb57;
+            background-color: #7ebd74;
             color: #fff;
         }
 
@@ -597,7 +597,7 @@
 
         .highlight-text {
             display: inline-block;
-            color: #313131;
+            color: #ffffff;
             /* オプションテキストの色 */
         }
 
@@ -662,7 +662,7 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #fcdb57;
+            background-color: #7ebd74;
             margin-top: 12px;
             /* ← ここで下方向にずらす */
         }
@@ -691,7 +691,7 @@
             /* ここで枠線を指定 */
             outline-offset: 2px;
             /* 外側に色を追加 */
-            box-shadow: 0 0 0 3px #fcdb57
+            box-shadow: 0 0 0 3px #7ebd74
         }
 
         /* 必須マークのスタイル */
@@ -990,7 +990,7 @@
     </div>
 
     <div class="container">
-        <h1>母乳育児相談室まどか<br>（金足店）<br>予約フォーム
+        <h1>母乳育児相談室まどか<br>（並木クリニック店）<br>予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -1004,39 +1004,23 @@
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
-        <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
-        <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">桶谷式母乳マッサージ</button>
-            <button type="button" onclick="showMenu('female')">Revi・エステ</button>
-        </div>
-
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
 
-        <div id="male" class="menu-section">
-            <div class="labeltyuuou">
-                <span class="highlight-text">◆桶谷式母乳マッサージ◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">初診・60分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">再診・30分</button>
-            </div>
-            <div class="labeltyuuou">
-                <span class="highlight-text">オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="0">旦那様・同席</button>
-                <button type="button" id="secondirradiations" onclick="selectirradiations(this)" data-price="0">お子様・同席</button>
-            </div>
+        <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
+        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
+        <div class="symptoms">
+            <button type="button" onclick="selectSymptom(this)" data-price="0">初診・60分</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="0">再診・30分</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="0">入院中・30分</button>
         </div>
-
-        <div id="female" class="menu-section">
-            <div class="labeltyuuou">
-                <span class="highlight-text">◆Revi・エステ◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">後日</button>
-            </div>
+        <div class="labeltyuuou">
+            <span class="highlight-text">オプション</span>
+        </div>
+        <div class="irradiations">
+            <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                data-price="0">旦那様・同席</button>
+            <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
+                data-price="0">お子様・同席</button>
         </div>
 
         <div class="label">希望日時<span class="required">必須</span></div>
@@ -1136,7 +1120,7 @@
         let menuTimes = {
             '初診・60分': 90,
             '再診・30分': 60,
-            '後日': 0
+            '入院中・30分': 60
         };
 
 
