--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(16px);
             /* 中央配置と右ずらし */
-            background: #7ebd74;
+            background: #98FB98;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #7ebd74, #7ebd74);
+            background: linear-gradient(135deg, #98FB98, #98FB98);
             color: white;
             padding: 20px;
             border-radius: 0 0px 0px 0px;
@@ -123,7 +123,7 @@
             margin-bottom: 20px;
             padding: 3px;
             font-weight: 400;
-            background-color: #7ebd74;
+            background-color: #98FB98;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -141,7 +141,7 @@
             display: block;
             margin-bottom: 20px;
             padding: 3px;
-            background-color: #7ebd74;
+            background-color: #98FB98;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -160,7 +160,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 400;
-            background-color: #7ebd74;
+            background-color: #98FB98;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -323,7 +323,7 @@
         }
 
         .calendar td.selected {
-            background-color: #7ebd74;
+            background-color: #98FB98;
             color: #fff;
         }
 
@@ -662,7 +662,7 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #7ebd74;
+            background-color: #98FB98;
             margin-top: 12px;
             /* ← ここで下方向にずらす */
         }
@@ -691,7 +691,7 @@
             /* ここで枠線を指定 */
             outline-offset: 2px;
             /* 外側に色を追加 */
-            box-shadow: 0 0 0 3px #7ebd74
+            box-shadow: 0 0 0 3px #98FB98
         }
 
         /* 必須マークのスタイル */
@@ -1668,7 +1668,7 @@
                 isSubmitting = false;
                 submitBtn.disabled = false;
                 submitBtn.textContent = originalText;
-                submitBtn.style.backgroundColor = '#7ebd74'; // 元の色に戻す
+                submitBtn.style.backgroundColor = '#98FB98'; // 元の色に戻す
             };
 
             const formData = {
